# vitets_alias_broken

./: .gitignore  MODULE.bazel  README.md
portal/: BUILD.bazel  vite.config.ts
portal/src/: main.ts
