load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//portal:vite/package_json.bzl", vite_bin = "bin")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "portal-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*",
            "node_modules/**",
            "dist/**",
        ],
    ),
)

vite_bin.vite(
    name = "build",
    srcs = [
        ":node_modules",
        ":portal-srcs",
    ],
    args = [
        "build --config vite.config.ts",
    ],
    chdir = package_name(),
    out_dirs = ["dist"],
)

vite_bin.vite_binary(
    name = "vite",
    args = [
        "build --config vite.config.ts",
    ],
    chdir = package_name(),
    data = [
        ":node_modules",
        ":portal-srcs",
    ],
)

vite_bin.vite_binary(
    name = "vite_normal",
    args = [
        "build --config vite.config.ts",
    ],
    chdir = "$$BUILD_WORKSPACE_DIRECTORY/" + package_name(),
    data = [
        ":node_modules",
        ":portal-srcs",
    ],
)
